# test_dynamic_translate

./: main.py  model.py  pyproject.toml
